--- a/src/makingPlaylistThings/MakingPlaylist.module.css
+++ b/src/makingPlaylistThings/MakingPlaylist.module.css
@@ -40,7 +40,7 @@ h1{
       background-color: rgb(232, 221, 250);
       font-size: 2.5rem;
       width: 8vw;
-      z-index: 1;
+      z-index: 3;
       border-bottom-right-radius: 20px;
       border: 3px outset rgb(204, 187, 233);
       min-width: 25px;
